--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
 
     - name: checkout repository
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
 
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v4
