fix infra pipeline

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -41,4 +41,4 @@ jobs:
       working-directory: ./terraform
       run: |
         terraform init
-        terraform apply -auto-approve --var-file=./terraform/terraform.tfvars
+        terraform apply -auto-approve --var-file=terraform.tfvars
