--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -2,9 +2,12 @@ name: "Deploy Infra"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - "terraform/**"
+  workflow_dispatch:
+
 
 jobs:
   deploy-infra:
@@ -14,7 +17,7 @@ jobs:
     steps:
 
     - name: checkout repository
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
 
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -38,4 +41,4 @@ jobs:
       working-directory: ./terraform
       run: |
         terraform init
-        terraform apply -auto-approve --var-file=./terraform/terraform.tfvars
+        terraform apply -auto-approve --var-file=terraform.tfvars
